--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
             <id>evolveum-nexus-releases</id>
             <name>Internal Releases</name>
             <url>http://nexus.evolveum.com/nexus/content/repositories/releases/</url>
@@ -72,11 +77,6 @@
             <id>evolveum-nexus-snapshots</id>
             <name>Internal Releases</name>
             <url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>apache-snapshots</id>
-            <name>Apache Snapshots</name>
-            <url>http://repository.apache.org/snapshots/</url>
         </repository>
     </repositories>
 
@@ -175,11 +175,6 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.auth0</groupId>
-                <artifactId>auth0</artifactId>
-                <version>1.35.0</version>
-            </dependency>
-            <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
                 <version>2.15.2</version>
@@ -190,6 +185,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>auth0</artifactId>
+            <version>1.35.0</version>
+        </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>cognitoidentityprovider</artifactId>
