--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release package to the Maven Central Repository
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -52,7 +52,7 @@ jobs:
         # maven-semantic-release requires "maven-settings.xml" in the workspace directory
         run: |
           mv ~/.m2/settings.xml maven-settings.xml
-          semantic-release --branch master --prepare @conveyal/maven-semantic-release \
+          semantic-release --branch main --prepare @conveyal/maven-semantic-release \
             --publish @semantic-release/github,@conveyal/maven-semantic-release \
             --verify-conditions @semantic-release/github,@conveyal/maven-semantic-release \
             --verify-release @conveyal/maven-semantic-release\
