--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
             <artifactId>auth0</artifactId>
             <version>1.42.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.2.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
